@@ -53,6 +53,9 @@ Trunk -  Unreleased
     HIVE-1075. Make it possible for users to recover data when moveTask fails
     (Zheng Shao via Ning Zhang)
 
+    HIVE-1072. Show table extended to error out when the partition does not exist.
+    (Yongqiang He via zshao)
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
